ci: add GitHub Actions workflow to build and push image to GHCR
- .github/workflows/docker-build.yml: builds linux/amd64 image on push to
  main and on version tags; pushes :latest, :sha-<short>, :vX.Y.Z to GHCR
- Uses GHA layer cache for fast rebuilds
- nextflow.config: slurm profile updated to use GHCR image
  (docker://ghcr.io/bu-neuromics/microbe-comm-struct:latest) and tuned
  resources for cluster (FASTSPAR: 20 CPUs, 64 GB, long queue)
- README.md: cluster + CI/CD sections added
- AGENTS.md: CI/CD section added

--- a/nextflow.config
+++ b/nextflow.config
@@ -78,41 +78,58 @@ profiles {
         process.executor = 'local'
     }
 
-    // slurm: submit to a SLURM cluster, still using the Docker image via
-    // Singularity (common on HPC).  Adjust queue/account as needed.
+    // slurm: submit to a SLURM cluster using Singularity to pull the image
+    // from GitHub Container Registry (GHCR).
+    //
+    // Image is built automatically on every push to main via GitHub Actions
+    // and pushed to: ghcr.io/bu-neuromics/microbe-comm-struct:latest
+    //
+    // If the package is private, authenticate Singularity before running:
+    //   export SINGULARITY_DOCKER_USERNAME=<github_username>
+    //   export SINGULARITY_DOCKER_PASSWORD=<github_personal_access_token>
+    //
+    // Run:
+    //   ./run_pipeline.sh --input counts.csv --metadata metadata.csv -profile slurm
+    //
+    // Adjust queue/account/resources to match your cluster's configuration.
     slurm {
-        process.executor    = 'slurm'
-        singularity.enabled = true
+        process.executor       = 'slurm'
+        singularity.enabled    = true
         singularity.autoMounts = true
 
         process {
-            container = "docker://microbe-comm-struct:latest"
+            container = "docker://ghcr.io/bu-neuromics/microbe-comm-struct:latest"
             queue     = "short"
             cpus      = 4
             memory    = "16 GB"
             time      = "12 h"
 
             withName: 'AITCHISON_PCA' {
-                cpus   = 2
-                memory = "8 GB"
+                cpus   = 4
+                memory = "16 GB"
                 time   = "1 h"
             }
 
             withName: 'RPCA_DEICODE' {
-                cpus   = 2
-                memory = "16 GB"
+                cpus   = 4
+                memory = "32 GB"
                 time   = "2 h"
             }
 
+            // FastSpar bootstrap loop uses parallel::mclapply — allocate
+            // enough CPUs so all bootstrap workers run concurrently.
+            // Memory scales O(n²) with taxa count; 64 GB handles ~3k taxa.
+            // Increase for species-level or very large unfiltered datasets.
             withName: 'FASTSPAR' {
-                cpus   = 8
-                memory = "16 GB"
-                time   = "8 h"
+                cpus   = 20
+                memory = "64 GB"
+                time   = "4 h"
+                queue  = "long"
             }
 
             withName: 'NETWORK_NULL' {
-                cpus   = 2
-                memory = "4 GB"
+                cpus   = 10
+                memory = "8 GB"
                 time   = "2 h"
             }
         }
