fix: pin openjdk=17, set NXF_JAVA_HOME explicitly to avoid HPC Java conflicts
- environment.yml: pin to conda-forge::openjdk=17 (LTS, avoids broken generic
  openjdk>=11 resolutions on HPC clusters)
- run_pipeline.sh: resolve Java home inside conda env and pass as NXF_JAVA_HOME
  to nextflow, overriding any system-wide JAVA_HOME; probes lib/jvm, bin/java,
  and env JAVA_HOME in order; clear error message if Java is missing

--- a/environment.yml
+++ b/environment.yml
@@ -4,5 +4,5 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - openjdk>=11
-  - nextflow
+  - conda-forge::openjdk=17
+  - bioconda::nextflow
