fix(nextflow): adjusted nextflow config and pipeline runner for scc

--- a/nextflow.config
+++ b/nextflow.config
@@ -92,14 +92,15 @@ profiles {
     //   ./run_pipeline.sh --input counts.csv --metadata metadata.csv -profile slurm
     //
     // Adjust queue/account/resources to match your cluster's configuration.
-    slurm {
-        process.executor       = 'slurm'
+    sge {
+        process.executor       = 'sge'
         singularity.enabled    = true
         singularity.autoMounts = true
 
         process {
             container = "docker://ghcr.io/bu-neuromics/microbe-comm-struct:latest"
-            queue     = "short"
+            clusterOptions = "-P bubhub"
+            penv = "omp"
             cpus      = 4
             memory    = "16 GB"
             time      = "12 h"
@@ -121,10 +122,9 @@ profiles {
             // Memory scales O(n²) with taxa count; 64 GB handles ~3k taxa.
             // Increase for species-level or very large unfiltered datasets.
             withName: 'FASTSPAR' {
-                cpus   = 20
-                memory = "64 GB"
-                time   = "4 h"
-                queue  = "long"
+                cpus   = 8
+                memory = "32 GB"
+                time   = "12 h"
             }
 
             withName: 'NETWORK_NULL' {
