refactor: drop FastSpar/null-model, run ordination across all taxonomic levels
- main.nf: remove FASTSPAR and NETWORK_NULL processes; redesign to accept
  --input_dir (directory of CSVs) and auto-discover levels from filenames;
  both AITCHISON_PCA and RPCA_DEICODE run per-level with publishDir at
  output_dir/<level>/{aitchison_pca,rpca_deicode}/
- nextflow.config: remove FastSpar/null-model params and resource specs;
  rename input -> input_dir; trim to docker/local/sge profiles
- run_pipeline.sh: swap --input FILE for --input_dir DIR; drop --taxonomy

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,25 +1,23 @@
 // ============================================================
-// nextflow.config  –  Community structure analysis pipeline
+// nextflow.config  –  Ordination pipeline
 // ============================================================
 
 // ── Pipeline parameters (override with --param value on CLI) ─
 params {
     // ── Required ──────────────────────────────────────────────
-    // Path to counts CSV (rows = taxa, columns = samples)
-    input           = null
+    // Directory containing counts CSVs, one per taxonomic level.
+    // Both filtered and unfiltered naming conventions are supported:
+    //   filtered_ancom_count_input_<level>.csv
+    //   ancom_count_input_<level>.csv
+    input_dir       = null
 
     // Path to sample metadata CSV (rows = samples, must contain
     // a 'group' column with values e.g. PD / control)
     metadata        = null
 
     // ── Output ────────────────────────────────────────────────
+    // Results are written to <output_dir>/<level>/{aitchison_pca,rpca_deicode}/
     output_dir      = "results"
-
-    // ── Taxonomy (optional) ───────────────────────────────────
-    // Path to taxonomy CSV used by FastSpar for heatmap annotation
-    // and cross-kingdom breakdown.
-    // Expected columns: taxon_id, kingdom, phylum, class, order, family, genus
-    taxonomy        = null
 
     // ── Reproducibility ───────────────────────────────────────
     seed            = 42
@@ -28,7 +26,9 @@ params {
 // ── Execution profiles ───────────────────────────────────────
 profiles {
 
-    // default: run every process inside the microbe-comm-struct Docker image
+    // docker: run every process inside the microbe-comm-struct Docker image.
+    // On ARM64 hosts (DGX Spark), register QEMU first:
+    //   docker run --privileged --rm tonistiigi/binfmt --install x86_64
     docker {
         docker.enabled    = true
         docker.runOptions = "-v ${projectDir}:/workspace"
@@ -36,101 +36,60 @@ profiles {
         process {
             container = "microbe-comm-struct:latest"
 
-            // Default resource allocation per process
             cpus   = 2
             memory = "4 GB"
-            time   = "2 h"
+            time   = "1 h"
 
             withName: 'AITCHISON_PCA' {
                 cpus   = 2
                 memory = "8 GB"
-                time   = "1 h"
+                time   = "30 min"
             }
 
             withName: 'RPCA_DEICODE' {
                 cpus   = 2
                 memory = "16 GB"
-                time   = "2 h"
-            }
-
-            // FastSpar calls an external binary and runs 1000 bootstraps.
-            // Unfiltered family-level data (~1963 taxa) needs >8 GB for the
-            // 1963x1963 co-occurrence matrix across 1000 bootstrap iterations.
-            // QEMU emulation adds overhead, so threads capped at 8 to keep
-            // per-thread memory manageable on the 128 GB DGX Spark host.
-            withName: 'FASTSPAR' {
-                cpus   = 8
-                memory = "48 GB"
-                time   = "8 h"
-            }
-
-            withName: 'NETWORK_NULL' {
-                cpus   = 10
-                memory = "4 GB"
-                time   = "1 h"
+                time   = "30 min"
             }
         }
     }
 
     // local: skip Docker (assumes R + all packages are installed locally)
     local {
-        docker.enabled = false
+        docker.enabled   = false
         process.executor = 'local'
     }
 
-    // slurm: submit to a SLURM cluster using Singularity to pull the image
-    // from GitHub Container Registry (GHCR).
+    // sge: submit to BU SCC (SGE) cluster via Singularity.
     //
     // Image is built automatically on every push to main via GitHub Actions
-    // and pushed to: ghcr.io/bu-neuromics/microbe-comm-struct:latest
-    //
-    // If the package is private, authenticate Singularity before running:
-    //   export SINGULARITY_DOCKER_USERNAME=<github_username>
-    //   export SINGULARITY_DOCKER_PASSWORD=<github_personal_access_token>
+    // and pulled from: ghcr.io/bu-neuromics/microbe-comm-struct:latest
     //
     // Run:
-    //   ./run_pipeline.sh --input counts.csv --metadata metadata.csv -profile slurm
-    //
-    // Adjust queue/account/resources to match your cluster's configuration.
+    //   ./run_pipeline.sh --input_dir data/filtered/ --metadata metadata.csv -profile sge
     sge {
         process.executor       = 'sge'
         singularity.enabled    = true
         singularity.autoMounts = true
 
         process {
-            container = "docker://ghcr.io/bu-neuromics/microbe-comm-struct:latest"
+            container      = "docker://ghcr.io/bu-neuromics/microbe-comm-struct:latest"
             clusterOptions = "-P bubhub"
-            penv = "omp"
-            cpus      = 4
-            memory    = "16 GB"
-            time      = "12 h"
+            penv           = "omp"
+            cpus           = 4
+            memory         = "16 GB"
+            time           = "1 h"
 
             withName: 'AITCHISON_PCA' {
                 cpus   = 4
                 memory = "16 GB"
-                time   = "1 h"
+                time   = "30 min"
             }
 
             withName: 'RPCA_DEICODE' {
                 cpus   = 4
                 memory = "32 GB"
-                time   = "2 h"
-            }
-
-            // FastSpar bootstrap loop uses parallel::mclapply — allocate
-            // enough CPUs so all bootstrap workers run concurrently.
-            // Memory scales O(n²) with taxa count; 64 GB handles ~3k taxa.
-            // Increase for species-level or very large unfiltered datasets.
-            withName: 'FASTSPAR' {
-                cpus   = 8
-                memory = "32 GB"
-                time   = "12 h"
-            }
-
-            withName: 'NETWORK_NULL' {
-                cpus   = 10
-                memory = "8 GB"
-                time   = "2 h"
+                time   = "30 min"
             }
         }
     }
